Tue Jun  7 18:30:04 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): add .SUFFIXES from depend file.
	  fixed: [ruby-dev:26294]

Tue Jun  7 17:20:39 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (parser_yylex): allow ';;' to be block terminator in
	  place of 'end'.  [highly experimental]

	* misc/ruby-mode.el (ruby-block-end-re): allow ';;' to be a
	  negative indent trigger.  [highly experimental]

	* parse.y (parser_yylex): small error fixed.

Tue Jun  7 16:45:49 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (parser_yylex): "respond_to?:foo" should be interpreted
	  as "respond_to? :foo" at the command level.  [ruby-talk:144303]

Tue Jun  7 16:32:53 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): raise exception on debug mode (-d),
	  not verbose mode (-v/-w).  [ruby-core:05123]

	* sprintf.c (rb_f_sprintf): warn always on verbose mode.

Tue Jun  7 10:30:49 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: slave-ip fails to call procedures
	  delegated by master-ip.

Mon Jun  6 16:35:18 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/ripper/depend: add .y to .SUFFIXES for nmake.

Sun Jun  5 23:00:35 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/console.rb: create console when required

	* ext/tk/sample/tkextlib/tile/demo.rb: fix TypeError & create Console

Sun Jun  5 10:23:52 2005  Tanaka Akira  <akr@m17n.org>

	* signal.c (ruby_signal): don't set SA_RESTART.
	  [ruby-dev:26276]

Sat Jun  4 14:55:18 2005  Tanaka Akira  <akr@m17n.org>

	* test/dbm/test_dbm.rb: merged from ext/dbm/testdbm.rb.

	* test/gdbm/test_gdbm.rb: merged from ext/gdbm/testgdbm.rb.

	* test/sdbm/test_sdbm.rb: renamed from ext/sdbm/testsdbm.rb with
	  modification to use test/unit.

Fri Jun  3 23:23:02 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* intern.h (rb_fdset_t): deal with fd bit sets over FD_SETSIZE.
	  fixed: [ruby-dev:26187]
