@@ -1,3 +1,8 @@
+Tue Jun  7 18:39:31 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* lib/thread.rb: RDoc documentation from Eric Hodel
+	  <drbrain@segment7.net> added.  [ruby-core:05148]
+
 Tue Jun  7 18:30:04 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/mkmf.rb (create_makefile): add .SUFFIXES from depend file.
